# ABarashkov_Python_QAGuru_6_19

./: pyproject.toml
